fix(education): add bottom padding to avoid cropping background image

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -97,6 +97,10 @@ strong {
     }
   }
 
+  #education {
+    padding-bottom: 100px;
+  }
+
   .with-background {
     position: relative;
 
